--- a/keyboard.css
+++ b/keyboard.css
@@ -33,8 +33,8 @@ body {
 }
 .typearea {
 	font-size: 18px;
-	height:300px;
-	width:500px;
+	height:150px;
+	width:700px;
 	display: block;
 	margin-top: 50px;
 }
@@ -43,4 +43,7 @@ body {
 	justify-content:center;
 	align-items:center;
 	width:100%;
+}
+.shift {
+	display: none;
 }
