--- a/keyboard.css
+++ b/keyboard.css
@@ -23,8 +23,41 @@ footer a:hover {
 .content {
 	flex: 1;
 }
-.Keyboard {
+.keyboard {
 	padding:30px;
+	display: relative;
+	z-index: 10;
+	font-size: 1.5rem;
+}
+@media (max-width: 991.98px) { 
+	.keyboard {
+		font-size: 1.25rem;
+	}
+}
+@media (max-width: 767.98px) { 
+	.keyboard {
+		font-size: 1rem;
+	}
+}
+@media (max-width: 575.98px) { 
+	.keyboard {
+		font-size: 0.8rem;
+	}
+}
+@media (max-width: 450px) { 
+	.keyboard {
+		font-size: 0.7rem;
+	}
+}
+@media (max-width: 390px) { 
+	.keyboard {
+		font-size: 0.6rem;
+	}
+}
+@media (max-width: 340px) { 
+	.keyboard {
+		font-size: 0.5rem;
+	}
 }
 .KeyboardRow {
 	text-align: center;
